<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btn_nav_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_list_36"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="6dp"
        android:text="@string/btn_nav_list"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_nav_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_history_36"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="6dp"
        android:text="@string/btn_nav_history"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_nav_history"
        app:layout_constraintStart_toStartOf="@+id/btn_nav_list"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_scan"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/dark_blue"
        android:src="@drawable/ic_camera_72"
        android:tint="@color/white"
        app:fabCustomSize="220dp"
        app:maxImageSize="100dp"
        app:borderWidth="0dp"
        app:elevation="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@drawable/wave_secondary"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="10"
        android:background="@drawable/wave_primary"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>